--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,29 @@
+@font-face {
+    font-family: "Montserrat";
+    src: url(../fonts/Montserrat-Regular.ttf);
+    font-style: normal;
+    font-swap: swap;
+}
+
+/* MENU: 500
+FOOTER 400
+CARDS: 400 700 */
 :root{
+
+    --primary-color: #8F0101;
+    --secondary-color: #B81515;
+
     --background-primary-color: #FFFFFF;
     --background-secondary-color: #f5f5f5;
     --background-tertiary-color: #000000;
 
-    --button-primary-color: #8F0101;
-    --button-secondary-color: #B81515;
-
     --text-primary-color: #222222;
     --text-secondary-color: var(--background-primary-color);
+
+    --title-weight: 700;
+    --text-weight: 400;
+    --menu-text-weight: 500;
+
 }
 /* CSS RESET */
 body, img, h1, p, fieldset, legend, label, input, select, textarea, button {
@@ -16,9 +32,6 @@ body, img, h1, p, fieldset, legend, label, input, select, textarea, button {
     box-sizing: border-box;
 }
 
-h1{
-    color: var(--text-primary-color)
-}
 
 
 /* BACKGROUND
