--- a/css/style.css
+++ b/css/style.css
@@ -1,38 +1,41 @@
 @font-face {
-    font-family: "Montserrat";
-    src: url(../fonts/Montserrat-Regular.ttf);
-    font-style: normal;
-    font-swap: swap;
+  font-family: "Montserrat";
+  src: url(../fonts/Montserrat-Regular.ttf);
+  font-style: normal;
+  font-swap: swap;
 }
 
-/* MENU: 500
-FOOTER 400
-CARDS: 400 700 */
-:root{
+:root {
+  --primary-color: #8f0101;
+  --secondary-color: #b81515;
 
-    --primary-color: #8F0101;
-    --secondary-color: #B81515;
+  --background-primary-color: #ffffff;
+  --background-secondary-color: #f5f5f5;
+  --background-tertiary-color: #000000;
 
-    --background-primary-color: #FFFFFF;
-    --background-secondary-color: #f5f5f5;
-    --background-tertiary-color: #000000;
+  --text-primary-color: #222222;
+  --text-secondary-color: var(--background-primary-color);
 
-    --text-primary-color: #222222;
-    --text-secondary-color: var(--background-primary-color);
-
-    --title-weight: 700;
-    --text-weight: 400;
-    --menu-text-weight: 500;
-
+  --title-weight: 700;
+  --text-weight: 400;
+  --menu-text-weight: 500;
 }
 /* CSS RESET */
-body, img, h1, p, fieldset, legend, label, input, select, textarea, button {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+body,
+img,
+h1,
+p,
+fieldset,
+legend,
+label,
+input,
+select,
+textarea,
+button {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
-
-
 
 /* BACKGROUND
 BOTOES
