--- a/css/global.css
+++ b/css/global.css
@@ -30,6 +30,7 @@ body, img, h1, p, fieldset, legend, label, input, select, textarea, button {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: "Montserrat", sans-serif;
 }
 
 
