--- a/css/header.css
+++ b/css/header.css
@@ -12,10 +12,18 @@ header{
 .navigation-menu{
     margin-top: 24px;
 }
+
 .logo{
     display: inline-block;
     width: 64px;
     height: 64px;
+}
+
+.img-mobile{
+    display: block;
+}
+.img-desktop{
+    display: none;
 }
 
 input[type="checkbox"]:checked ~ nav{
@@ -72,5 +80,31 @@ nav{
 
     .list-links li{
         margin: 0;
+    }
+}
+
+@media screen and (min-width: 1024px) {
+    header{
+        padding: 38px 120px;
+    }
+    .logo{
+        width: 260px;
+        height: 34px
+    }
+    .img-mobile{
+        display: none;
+    }
+    .img-desktop{
+        display: block;
+    }
+
+    .navigation-menu a:hover{
+        color: var(--primary-color);
+    }
+}
+
+@media screen and (min-width: 1920px) {
+    header{
+        padding: 38px 160px;
     }
 }
