--- a/css/global.css
+++ b/css/global.css
@@ -30,11 +30,45 @@ body, img, h1, p, fieldset, legend, label, input, select, textarea, button {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+   
+}
+
+body{
     font-family: "Montserrat", sans-serif;
+    color: var(--text-primary-color);
+
+}
+
+.section-title h2{
+    font-size: 28px;
+    font-weight: var(--title-weight);
+    margin: 0;
+    text-align:center
+}
+
+.section-title hr{
+    width: 180px;
+    height: 4px;
+    background-color: var(--secondary-color);
+    border: none;
+    margin: 16px auto 32px;
 }
 
 
+@media screen and (min-width: 768px) {
+    .section-title h2{
+        font-size: 32px;
+    }
+}
 
+
+@media screen and (min-width: 1024px) {
+    
+}
+
+@media screen and (min-width: 1920px) {
+    
+}
 /* BACKGROUND
 BOTOES
 TEXTO */
