Finaliza estilos do botão

--- a/css/global.css
+++ b/css/global.css
@@ -54,6 +54,18 @@ body{
     margin: 16px auto 32px;
 }
 
+.button{
+    width: 280px;
+    height: 64px;
+    font-size: 20px;
+    font-weight: var(--title-weight);
+    background-color: var(--secondary-color);
+    color: var(--text-secondary-color);
+    border-radius: 16px;
+    display: inline-block;
+    text-decoration: none;
+    line-height: 64px;
+}
 
 @media screen and (min-width: 768px) {
     .section-title h2{
@@ -63,7 +75,9 @@ body{
 
 
 @media screen and (min-width: 1024px) {
-    
+    .button:hover{
+        background-color: var(--primary-color);
+    }
 }
 
 @media screen and (min-width: 1920px) {
