--- a/css/offers.css
+++ b/css/offers.css
@@ -1,3 +1,10 @@
+.offers-cards {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 24px;
+}
+
 .card {
   color: var(--text-secondary-color);
   background-color: black;
@@ -33,9 +40,33 @@
   display: inline-block;
 }
 
+.card.japao {
+  background: url("../img/bg-card-japao.jpg") no-repeat center center/cover;
+}
+
+.card.san-andreas {
+  background: url("../img/bg-card-san-andreas.jpg") no-repeat center
+    center/cover;
+}
+
+.card.paraiba {
+  background: url("../img/bg-card-paraiba.jpg") no-repeat center center/cover;
+}
+
+.card.manaus {
+  background: url("../img/bg-card-manaus.jpg") no-repeat center center/cover;
+}
+
+@media screen and (min-width: 768px) {
+  .offers-cards {
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+}
 @media screen and (min-width: 1024px) {
   .card {
-    width: 588px;
+    width: 420px;
     height: 308px;
   }
 
@@ -47,3 +78,18 @@
     font-size: 40px;
   }
 }
+
+@media screen and (min-width: 1024px) {
+  .card {
+    width: 588px;
+  }
+}
+
+
+@media screen and (min-width: 1920px) {
+  .offers-cards {
+    width: 1250px;
+    margin: 0 auto;
+  }
+}
+
